--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 					<li><a href="https://giftbit.github.io/dynameh/modules/_requestbuilder_.html#addprojection">build a projection expression</a></li>
 					<li><a href="https://giftbit.github.io/dynameh/modules/_requestbuilder_.html#addcondition">build a condition expression</a></li>
 					<li><a href="https://giftbit.github.io/dynameh/modules/_batchhelper_.html">run oversized batch requests</a></li>
+					<li><a href="https://giftbit.github.io/dynameh/modules/_queryhelper_.html">paginate through queries</a></li>
+					<li><a href="https://giftbit.github.io/dynameh/modules/_scanhelper_.html">paginate through scans</a></li>
 					<li><a href="https://giftbit.github.io/dynameh/modules/_concurrenthelper_.html">run requests concurrently that can&#39;t be run in batch</a></li>
 					<li><a href="https://giftbit.github.io/dynameh/interfaces/_tableschema_.tableschema.html#versionkeyfield">implement optimistic locking</a></li>
 					<li><a href="https://giftbit.github.io/dynameh/interfaces/_tableschema_.tableschema.html#dateserializationfunction">configure Date serialization</a></li>
