--- a/modules/_requestbuilder_.html
+++ b/modules/_requestbuilder_.html
@@ -106,12 +106,12 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L831">requestBuilder.ts:831</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L831">requestBuilder.ts:831</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Adds a condition expression to a input object.  A condition expression
+									<p>Adds a condition expression to an input object.  A condition expression
 									defines under what conditions the item can be put/deleted.</p>
 								</div>
 								<p>Any existing condition expression will be amended.</p>
@@ -155,12 +155,12 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L848">requestBuilder.ts:848</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L848">requestBuilder.ts:848</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Adds a filter expression to a input object.  A filter expression
+									<p>Adds a filter expression to an input object.  A filter expression
 										refines results returned from a scan or query.  The filter applies
 										after the search and you will be billed for the bandwidth of all results
 									before the filter is applied.</p>
@@ -206,7 +206,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L790">requestBuilder.ts:790</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L790">requestBuilder.ts:790</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -256,7 +256,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L572">requestBuilder.ts:572</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L572">requestBuilder.ts:572</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -293,7 +293,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L487">requestBuilder.ts:487</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L487">requestBuilder.ts:487</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -328,7 +328,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L527">requestBuilder.ts:527</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L527">requestBuilder.ts:527</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -363,7 +363,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L462">requestBuilder.ts:462</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L462">requestBuilder.ts:462</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -398,7 +398,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L603">requestBuilder.ts:603</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L603">requestBuilder.ts:603</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -444,7 +444,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L332">requestBuilder.ts:332</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L332">requestBuilder.ts:332</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -482,7 +482,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L738">requestBuilder.ts:738</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L738">requestBuilder.ts:738</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -512,7 +512,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L92">requestBuilder.ts:92</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L92">requestBuilder.ts:92</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -553,7 +553,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L115">requestBuilder.ts:115</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L115">requestBuilder.ts:115</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -591,7 +591,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L372">requestBuilder.ts:372</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L372">requestBuilder.ts:372</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -645,7 +645,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L29">requestBuilder.ts:29</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L29">requestBuilder.ts:29</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -681,7 +681,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L438">requestBuilder.ts:438</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L438">requestBuilder.ts:438</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -726,7 +726,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L561">requestBuilder.ts:561</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L561">requestBuilder.ts:561</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -757,7 +757,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L181">requestBuilder.ts:181</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L181">requestBuilder.ts:181</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -804,7 +804,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L757">requestBuilder.ts:757</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/requestBuilder.ts#L757">requestBuilder.ts:757</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
