--- a/modules/_queryhelper_.html
+++ b/modules/_queryhelper_.html
@@ -91,13 +91,14 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/queryHelper.ts#L10">queryHelper.ts:10</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/queryHelper.ts#L12">queryHelper.ts:12</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Paginate through a query to collect all results.</p>
 								</div>
+								<p>For large results this can use significantly <em>more</em> memory than <code>queryByCallback()</code>.</p>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -128,7 +129,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/queryHelper.ts#L33">queryHelper.ts:33</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/queryHelper.ts#L37">queryHelper.ts:37</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -137,6 +138,7 @@
 										Pagination can be aborted by returning <code>false</code> (or a Promise that
 									resolves to <code>false</code>) from the callback.</p>
 								</div>
+								<p>For large results this can use significantly <em>less</em> memory than <code>queryAll()</code>.</p>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -192,7 +194,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/queryHelper.ts#L57">queryHelper.ts:57</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/30f7873/src/queryHelper.ts#L61">queryHelper.ts:61</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
