--- a/modules/_queryhelper_.html
+++ b/modules/_queryhelper_.html
@@ -158,7 +158,7 @@
 									<h5>callback: <span class="tsd-signature-symbol">(</span>items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">&gt;</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>A function that each page of results is passed to.  Return
-										<code>false</code> (or a Promise that resolves to <code>false</code>) to abort the scan.</p>
+										<code>false</code> (or a Promise that resolves to <code>false</code>) to abort the query.</p>
 									</div>
 									<ul class="tsd-parameters">
 										<li class="tsd-parameter-siganture">
