--- a/interfaces/_condition_.condition.html
+++ b/interfaces/_condition_.condition.html
@@ -96,6 +96,7 @@
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_condition_.condition.html#attribute" class="tsd-kind-icon">attribute</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_condition_.condition.html#not" class="tsd-kind-icon">not</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_condition_.condition.html#operator" class="tsd-kind-icon">operator</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_condition_.condition.html#values" class="tsd-kind-icon">values</a></li>
 							</ul>
@@ -111,7 +112,7 @@
 					<div class="tsd-signature tsd-kind-icon">attribute<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/90b736b/src/Condition.ts#L16">Condition.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/bac1ed6/src/Condition.ts#L16">Condition.ts:16</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -129,12 +130,27 @@
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="not" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> not</h3>
+					<div class="tsd-signature tsd-kind-icon">not<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/bac1ed6/src/Condition.ts#L21">Condition.ts:21</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>True to invert the condition.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="operator" class="tsd-anchor"></a>
 					<h3>operator</h3>
 					<div class="tsd-signature tsd-kind-icon">operator<span class="tsd-signature-symbol">:</span> <a href="../modules/_validation_.html#dynamoconditionoperator" class="tsd-signature-type">DynamoConditionOperator</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/90b736b/src/Condition.ts#L24">Condition.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/bac1ed6/src/Condition.ts#L29">Condition.ts:29</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -156,7 +172,7 @@
 					<div class="tsd-signature tsd-kind-icon">values<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/90b736b/src/Condition.ts#L31">Condition.ts:31</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/bac1ed6/src/Condition.ts#L36">Condition.ts:36</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -228,6 +244,9 @@
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_condition_.condition.html#attribute" class="tsd-kind-icon">attribute</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_condition_.condition.html#not" class="tsd-kind-icon">not</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_condition_.condition.html#operator" class="tsd-kind-icon">operator</a>
