--- a/modules/_queryhelper_.html
+++ b/modules/_queryhelper_.html
@@ -91,14 +91,14 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/bac1ed6/src/queryHelper.ts#L12">queryHelper.ts:12</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b6222dc/src/queryHelper.ts#L12">queryHelper.ts:12</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Paginate through a query to collect all results.</p>
 								</div>
-								<p>For large results this can use significantly <em>more</em> memory than <code>queryByCallback()</code>.</p>
+								<p>For large results this can use significantly <em>more</em> memory than <a href="_queryhelper_.html#querybycallback">queryByCallback</a>.</p>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -129,7 +129,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/bac1ed6/src/queryHelper.ts#L37">queryHelper.ts:37</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b6222dc/src/queryHelper.ts#L37">queryHelper.ts:37</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -138,7 +138,7 @@
 										Pagination can be aborted by returning <code>false</code> (or a Promise that
 									resolves to <code>false</code>) from the callback.</p>
 								</div>
-								<p>For large results this can use significantly <em>less</em> memory than <code>queryAll()</code>.</p>
+								<p>For large results this can use significantly <em>less</em> memory than <a href="_queryhelper_.html#queryall">queryAll</a>.</p>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -194,12 +194,12 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/bac1ed6/src/queryHelper.ts#L61">queryHelper.ts:61</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b6222dc/src/queryHelper.ts#L61">queryHelper.ts:61</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Paginate through a query to count all results.  This is more efficient than <code>queryAll()</code>
+									<p>Paginate through a query to count all results.  This is more efficient than <a href="_queryhelper_.html#queryall">queryAll</a>
 									when only the count is needed.</p>
 								</div>
 							</div>
