--- a/index.html
+++ b/index.html
@@ -79,11 +79,13 @@
 					<li><a href="https://giftbit.github.io/dynameh/interfaces/_tableschema_.tableschema.html#versionkeyfield">implement optimistic locking</a></li>
 					<li><a href="https://giftbit.github.io/dynameh/interfaces/_tableschema_.tableschema.html#dateserializationfunction">configure Date serialization</a></li>
 				</ul>
+				<p>Click above for API-specifics or read on for a general overview.</p>
 				<a href="#installation" id="installation" style="color: inherit; text-decoration: none;">
 					<h2>Installation</h2>
 				</a>
 				<p>Dynameh is your typical NPM package.</p>
 				<pre><code class="language-bash">npm install --save dynameh</code></pre>
+				<p><code>aws-sdk</code> is a peer dependency.  There are no other runtime dependencies.</p>
 				<a href="#usage" id="usage" style="color: inherit; text-decoration: none;">
 					<h2>Usage</h2>
 				</a>
